[WGSL] textureSampleGrad is not implemented https://bugs.webkit.org/show_bug.cgi?id=264371 rdar://118084526

Reviewed by Mike Wyrzykowski.

Add code generation for textureSampleGrad

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::emitTextureSampleGrad):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/270430@main